meja/tests/list_wrong_type.stderr
File "tests/list_wrong_type.meja", line 3, characters 8-12:
Error: Unbound constructor true.
